Bug 818340 - change third party cookie handling to block third party cookies from sites I haven't visited.  (r=jdm, r=dolske)
UltraBlame original commit: 8679f0f1c2153b06a31122670dcb7d7b2f9f2a42

--- a/extensions/cookie/test/test_app_uninstall_cookies.html
+++ b/extensions/cookie/test/test_app_uninstall_cookies.html
@@ -1050,6 +1050,36 @@ dry_run
 true
 )
 ;
+var
+previousCookiePrefValue
+=
+SpecialPowers
+.
+getIntPref
+(
+'
+network
+.
+cookie
+.
+cookieBehavior
+'
+)
+;
+SpecialPowers
+.
+setIntPref
+(
+'
+network
+.
+cookie
+.
+cookieBehavior
+'
+0
+)
+;
 permManager
 .
 addFromPrincipal
@@ -1372,6 +1402,20 @@ installer
 dry_run
 '
 previousDryRunValue
+)
+;
+SpecialPowers
+.
+setIntPref
+(
+'
+network
+.
+cookie
+.
+cookieBehavior
+'
+previousCookiePrefValue
 )
 ;
 permManager
