--- a/toolkit/devtools/webconsole/test/network_requests_iframe.html
+++ b/toolkit/devtools/webconsole/test/network_requests_iframe.html
@@ -44,8 +44,99 @@ javascript
 !
 -
 -
+var
+setAllowAllCookies
+=
+false
+;
 function
 makeXhr
+(
+aMethod
+aUrl
+aRequestBody
+aCallback
+)
+{
+/
+/
+On
+the
+first
+call
+allow
+all
+cookies
+and
+set
+cookies
+then
+resume
+the
+actual
+test
+if
+(
+!
+setAllowAllCookies
+)
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+"
+set
+"
+:
+[
+[
+"
+network
+.
+cookie
+.
+cookieBehavior
+"
+0
+]
+]
+}
+function
+(
+)
+{
+setAllowAllCookies
+=
+true
+;
+setCookies
+(
+)
+;
+makeXhrCallback
+(
+aMethod
+aUrl
+aRequestBody
+aCallback
+)
+;
+}
+)
+;
+else
+makeXhrCallback
+(
+aMethod
+aUrl
+aRequestBody
+aCallback
+)
+;
+}
+function
+makeXhrCallback
 (
 aMethod
 aUrl
@@ -176,6 +267,11 @@ aCallback
 )
 ;
 }
+function
+setCookies
+(
+)
+{
 document
 .
 cookie
@@ -208,6 +304,7 @@ bug826798
 st3fan
 "
 ;
+}
 /
 /
 -
