--- a/content/base/test/test_bug338583.html
+++ b/content/base/test/test_bug338583.html
@@ -4505,7 +4505,47 @@ stress_factor
 function
 doTest
 (
-test_id
+)
+{
+/
+/
+Allow
+all
+cookies
+then
+run
+the
+actual
+test
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+"
+set
+"
+:
+[
+[
+"
+network
+.
+cookie
+.
+cookieBehavior
+"
+0
+]
+]
+}
+doTestCallback
+)
+;
+}
+function
+doTestCallback
+(
 )
 {
 oldPrefVal
