Bug 838582 - Part 2: Move HTMLTextAreaElement to Web IDL bindings; r=bzbarsky
UltraBlame original commit: 87ab1cbdcea34320a9f21dc4e709620b8b587c20

--- a/content/base/test/test_copypaste.html
+++ b/content/base/test/test_copypaste.html
@@ -465,6 +465,10 @@ nsIClipboard
 var
 textarea
 =
+SpecialPowers
+.
+wrap
+(
 document
 .
 getElementById
@@ -472,6 +476,7 @@ getElementById
 '
 input
 '
+)
 )
 ;
 function
@@ -874,15 +879,6 @@ focus
 )
 ;
 textarea
-.
-QueryInterface
-(
-Components
-.
-interfaces
-.
-nsIDOMNSEditableElement
-)
 .
 editor
 .
