--- a/content/html/content/test/test_bug388558.html
+++ b/content/html/content/test/test_bug388558.html
@@ -258,6 +258,10 @@ input
 var
 textarea
 =
+SpecialPowers
+.
+wrap
+(
 document
 .
 getElementById
@@ -265,6 +269,7 @@ getElementById
 "
 textarea
 "
+)
 )
 ;
 input
@@ -429,15 +434,6 @@ focus
 ;
 textarea
 .
-QueryInterface
-(
-Components
-.
-interfaces
-.
-nsIDOMNSEditableElement
-)
-.
 setUserInput
 (
 "
@@ -539,15 +535,6 @@ element
 )
 ;
 textarea
-.
-QueryInterface
-(
-Components
-.
-interfaces
-.
-nsIDOMNSEditableElement
-)
 .
 setUserInput
 (
