--- a/editor/libeditor/text/tests/test_bug596333.html
+++ b/editor/libeditor/text/tests/test_bug596333.html
@@ -237,6 +237,10 @@ getEditor
 )
 {
 return
+SpecialPowers
+.
+wrap
+(
 document
 .
 getElementById
@@ -245,12 +249,6 @@ getElementById
 edit
 "
 )
-.
-QueryInterface
-(
-Ci
-.
-nsIDOMNSEditableElement
 )
 .
 editor
