Backed out 6 changesets (bug 832920, bug 825341, bug 838582, bug 842726, bug 629801, bug 842561) for Linux32 debug mochitest-2 and Windows/OSX mochitest-browser-chrome failures on a CLOSED TREE.
UltraBlame original commit: ca34c11bf55d05f0d024df500e9fcceed130ee9b

--- a/content/base/test/test_bug166235.html
+++ b/content/base/test/test_bug166235.html
@@ -564,13 +564,13 @@ SpecialPowers
 wrap
 (
 document
+)
 .
 getElementById
 (
 '
 input
 '
-)
 )
 ;
 function
@@ -851,6 +851,15 @@ focus
 )
 ;
 textarea
+.
+QueryInterface
+(
+SpecialPowers
+.
+Ci
+.
+nsIDOMNSEditableElement
+)
 .
 editor
 .
