--- a/content/base/test/test_copypaste.html
+++ b/content/base/test/test_copypaste.html
@@ -465,10 +465,6 @@ nsIClipboard
 var
 textarea
 =
-SpecialPowers
-.
-wrap
-(
 document
 .
 getElementById
@@ -476,7 +472,6 @@ getElementById
 '
 input
 '
-)
 )
 ;
 function
@@ -879,6 +874,15 @@ focus
 )
 ;
 textarea
+.
+QueryInterface
+(
+Components
+.
+interfaces
+.
+nsIDOMNSEditableElement
+)
 .
 editor
 .
