--- a/content/html/content/test/test_bug388558.html
+++ b/content/html/content/test/test_bug388558.html
@@ -258,10 +258,6 @@ input
 var
 textarea
 =
-SpecialPowers
-.
-wrap
-(
 document
 .
 getElementById
@@ -269,7 +265,6 @@ getElementById
 "
 textarea
 "
-)
 )
 ;
 input
@@ -434,6 +429,15 @@ focus
 ;
 textarea
 .
+QueryInterface
+(
+Components
+.
+interfaces
+.
+nsIDOMNSEditableElement
+)
+.
 setUserInput
 (
 "
@@ -535,6 +539,15 @@ element
 )
 ;
 textarea
+.
+QueryInterface
+(
+Components
+.
+interfaces
+.
+nsIDOMNSEditableElement
+)
 .
 setUserInput
 (
