--- a/content/base/test/test_XHR_onuploadprogress.html
+++ b/content/base/test/test_XHR_onuploadprogress.html
@@ -220,27 +220,12 @@ uploadprogress
 var
 event
 =
-document
-.
-createEvent
-(
-"
+new
 ProgressEvent
-"
-)
-;
-event
-.
-initProgressEvent
 (
 "
 progress
 "
-false
-false
-false
-false
-0
 )
 ;
 xhr
