Bug 842372 - Part 2: Hide getUserData and setUserData from content. r=bz
UltraBlame original commit: 6b597b71926503de2713b34313eebe67a9fd796c

--- a/content/base/test/test_bug548463.html
+++ b/content/base/test/test_bug548463.html
@@ -446,7 +446,12 @@ changeOwnerDocument
 (
 )
 {
+SpecialPowers
+.
+wrap
+(
 elem1
+)
 .
 setUserData
 (
@@ -465,7 +470,12 @@ elem1
 )
 ;
 }
+SpecialPowers
+.
+wrap
+(
 elem1
+)
 .
 setUserData
 (
