--- a/js/xpconnect/tests/mochitest/test_bug384632.html
+++ b/js/xpconnect/tests/mochitest/test_bug384632.html
@@ -177,12 +177,42 @@ Bug
 *
 /
 var
-div
+Cc
 =
+SpecialPowers
+.
+Cc
+Ci
+=
+SpecialPowers
+.
+Ci
+;
+var
+propBag
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+hash
+-
+property
+-
+bag
+;
+1
+"
+]
+.
+createInstance
 (
-'
-content
-'
+Ci
+.
+nsIWritablePropertyBag
 )
 ;
 var
@@ -191,37 +221,37 @@ obj
 {
 }
 ;
-div
+propBag
 .
-setUserData
+setProperty
 (
 "
 foopy
 "
 obj
-function
-(
-)
-{
-}
 )
 ;
 ok
 (
-div
+SpecialPowers
 .
-getUserData
+unwrap
+(
+propBag
+.
+getProperty
 (
 "
 foopy
 "
+)
 )
 =
 =
 =
 obj
 "
-getUserData
+nsIVariant
 works
 with
 regular
@@ -229,37 +259,37 @@ objects
 "
 )
 ;
-div
+propBag
 .
-setUserData
+setProperty
 (
 "
 foopy1
 "
 sidebar
-function
-(
-)
-{
-}
 )
 ;
 ok
 (
-div
+SpecialPowers
 .
-getUserData
+unwrap
+(
+propBag
+.
+getProperty
 (
 "
 foopy1
 "
+)
 )
 =
 =
 =
 sidebar
 "
-getUserData
+nsIVariant
 works
 with
 bizarre
