Bug 844274 - Move contacts API getAll cache to child process. r=sicking
UltraBlame original commit: 5f7a0300ac1f671806c25407fc7ad6ee3a3ae8c4

--- a/dom/contacts/tests/test_contacts_getall.html
+++ b/dom/contacts/tests/test_contacts_getall.html
@@ -2051,11 +2051,12 @@ true
 "
 Test
 cache
-invalidation
-between
+consistency
+when
+deleting
+contact
+during
 getAll
-and
-getNext
 "
 )
 ;
@@ -2219,20 +2220,14 @@ else
 is
 (
 count
-19
-"
-19
-contacts
-returned
-"
-)
-;
-ok
-(
-true
+20
 "
 last
 contact
+-
+20
+contacts
+returned
 "
 )
 ;
@@ -2259,7 +2254,7 @@ true
 "
 Delete
 the
-currect
+current
 contact
 while
 iterating
