Bug 843711 - Fix up new |Components| culprits in test suite. r=mccr8
UltraBlame original commit: f66f6db7f212d02687071bd42072f428864a3553

--- a/js/xpconnect/tests/mochitest/test_bug785096.html
+++ b/js/xpconnect/tests/mochitest/test_bug785096.html
@@ -218,6 +218,8 @@ option
 ;
 try
 {
+SpecialPowers
+.
 Components
 .
 lookupMethod
@@ -250,8 +252,9 @@ catch
 e
 )
 {
-do_throw
+ok
 (
+false
 "
 this
 call
