--- a/toolkit/identity/tests/chrome/sandbox_content_perms.html
+++ b/toolkit/identity/tests/chrome/sandbox_content_perms.html
@@ -115,6 +115,46 @@ CcDenied
 (
 )
 {
+/
+/
+Once
+Components
+goes
+away
+in
+content
+the
+question
+of
+whether
+or
+not
+/
+/
+Components
+.
+classes
+throws
+is
+not
+well
+-
+formed
+.
+if
+(
+typeof
+Components
+=
+=
+=
+'
+undefined
+'
+)
+return
+true
+;
 try
 {
 Components
