Bug 785606 - Support viewBox=none from SVG 1.2 Tiny r=jwatt
UltraBlame original commit: 87e9f84a9fc2c10b7eb29cc822b9064d9f4d880c

--- a/content/svg/content/test/test_dataTypesModEvents.html
+++ b/content/svg/content/test/test_dataTypesModEvents.html
@@ -1916,13 +1916,27 @@ viewBox
 ;
 marker
 .
+setAttribute
+(
+"
 viewBox
+"
+"
+none
+"
+)
+;
+marker
 .
-baseVal
-.
-height
-=
-4
+setAttribute
+(
+"
+viewBox
+"
+"
+none
+"
+)
 ;
 eventChecker
 .
