--- a/content/svg/content/test/test_dataTypes.html
+++ b/content/svg/content/test/test_dataTypes.html
@@ -2864,9 +2864,7 @@ animVal
 is
 (
 baseViewBox
-.
-x
-0
+null
 "
 viewBox
 baseVal
@@ -2876,130 +2874,10 @@ baseVal
 is
 (
 animViewBox
-.
-x
-0
+null
 "
 viewBox
-baseVal
-"
-)
-;
-is
-(
-baseViewBox
-.
-y
-0
-"
-viewBox
-baseVal
-"
-)
-;
-is
-(
-animViewBox
-.
-y
-0
-"
-viewBox
-baseVal
-"
-)
-;
-is
-(
-baseViewBox
-.
-width
-0
-"
-viewBox
-baseVal
-"
-)
-;
-is
-(
-animViewBox
-.
-width
-0
-"
-viewBox
-baseVal
-"
-)
-;
-is
-(
-baseViewBox
-.
-height
-0
-"
-viewBox
-baseVal
-"
-)
-;
-is
-(
-animViewBox
-.
-height
-0
-"
-viewBox
-baseVal
-"
-)
-;
-baseViewBox
-.
-x
-=
-10
-;
-baseViewBox
-.
-y
-=
-11
-;
-baseViewBox
-.
-width
-=
-12
-;
-baseViewBox
-.
-height
-=
-13
-;
-is
-(
-marker
-.
-getAttribute
-(
-"
-viewBox
-"
-)
-"
-10
-11
-12
-13
-"
-"
-viewBox
-attribute
+animVal
 "
 )
 ;
@@ -3295,6 +3173,15 @@ viewBox
 attribute
 "
 )
+;
+var
+storedViewBox
+=
+marker
+.
+viewBox
+.
+baseVal
 ;
 marker
 .
@@ -3343,6 +3230,145 @@ attribute
 "
 )
 ;
+is
+(
+marker
+.
+viewBox
+.
+baseVal
+null
+"
+viewBox
+baseVal
+"
+)
+;
+is
+(
+marker
+.
+viewBox
+.
+animVal
+null
+"
+viewBox
+animVal
+"
+)
+;
+is
+(
+storedViewBox
+.
+width
+7
+"
+Should
+not
+lose
+values
+"
+)
+;
+storedViewBox
+.
+width
+=
+200
+;
+is
+(
+storedViewBox
+.
+width
+200
+"
+Should
+be
+able
+to
+change
+detached
+viewBox
+rect
+"
+)
+;
+is
+(
+marker
+.
+hasAttribute
+(
+"
+viewBox
+"
+)
+false
+"
+viewBox
+hasAttribute
+should
+still
+be
+false
+"
+)
+;
+ok
+(
+marker
+.
+getAttribute
+(
+"
+viewBox
+"
+)
+=
+=
+=
+null
+"
+viewBox
+attribute
+should
+still
+be
+null
+"
+)
+;
+is
+(
+marker
+.
+viewBox
+.
+baseVal
+null
+"
+viewBox
+baseVal
+"
+)
+;
+is
+(
+marker
+.
+viewBox
+.
+animVal
+null
+"
+viewBox
+animVal
+"
+)
+;
 marker
 .
 setAttribute
@@ -3351,6 +3377,80 @@ setAttribute
 viewBox
 "
 "
+none
+"
+)
+;
+is
+(
+marker
+.
+hasAttribute
+(
+"
+viewBox
+"
+)
+true
+"
+viewBox
+hasAttribute
+"
+)
+;
+is
+(
+marker
+.
+viewBox
+.
+baseVal
+null
+"
+viewBox
+baseVal
+"
+)
+;
+is
+(
+marker
+.
+viewBox
+.
+animVal
+null
+"
+viewBox
+animVal
+"
+)
+;
+marker
+.
+setAttribute
+(
+"
+viewBox
+"
+"
+"
+)
+;
+is
+(
+marker
+.
+hasAttribute
+(
+"
+viewBox
+"
+)
+true
+"
+viewBox
+hasAttribute
 "
 )
 ;
