--- a/content/svg/content/test/test_fragments.html
+++ b/content/svg/content/test/test_fragments.html
@@ -379,6 +379,25 @@ Test
 "
 svgView
 (
+viewBox
+(
+none
+)
+)
+"
+true
+"
+none
+"
+null
+null
+)
+new
+Test
+(
+"
+svgView
+(
 zoomAndPan
 (
 disable
