Bug 404077:  Clean up erroneous expectAssertions calls from GC of objects created in a series of tests using showModalDialog.
This will require a little follow-up cleanup.

UltraBlame original commit: 58890b4aadfb11b4073806bd6dbef20a9a086fb0

--- a/dom/tests/mochitest/bugs/test_bug414291.html
+++ b/dom/tests/mochitest/bugs/test_bug414291.html
@@ -141,10 +141,10 @@ platform
 indexOf
 (
 "
-Linux
+Win
 "
 )
-=
+!
 =
 0
 )
@@ -153,8 +153,7 @@ SimpleTest
 .
 expectAssertions
 (
-0
-2
+1
 )
 ;
 }
