--- a/dom/tests/mochitest/bugs/test_bug406375.html
+++ b/dom/tests/mochitest/bugs/test_bug406375.html
@@ -194,8 +194,33 @@ SimpleTest
 .
 expectAssertions
 (
-2
 3
+)
+;
+}
+else
+if
+(
+navigator
+.
+platform
+.
+indexOf
+(
+"
+Linux
+"
+)
+=
+=
+0
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+1
 )
 ;
 }
