Bug 404077:  Adjust annotations of expected assertions.
UltraBlame original commit: c7cedc21bdf2ef82cbb615cfadbffaa080ef6f9a

--- a/content/media/test/test_a4_tone.html
+++ b/content/media/test/test_a4_tone.html
@@ -156,6 +156,33 @@ text
 javascript
 "
 >
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Win
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+2
+)
+;
+/
+/
+bug
+845676
+}
 /
 *
 *
