--- a/content/media/test/test_framebuffer.html
+++ b/content/media/test/test_framebuffer.html
@@ -155,6 +155,33 @@ text
 javascript
 "
 >
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Win
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+2
+)
+;
+/
+/
+bug
+845676
+}
 var
 testFile
 =
