--- a/content/media/test/test_preload_actions.html
+++ b/content/media/test/test_preload_actions.html
@@ -240,6 +240,33 @@ application
 javascript
 "
 >
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Win
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+8
+)
+;
+/
+/
+bug
+845676
+}
 /
 *
 *
