--- a/content/media/test/test_too_many_elements.html
+++ b/content/media/test/test_too_many_elements.html
@@ -236,6 +236,33 @@ application
 javascript
 "
 >
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Win
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+2
+)
+;
+/
+/
+bug
+845676
+}
 /
 *
 *
