--- a/dom/media/tests/mochitest/test_peerConnection_basicAudioVideo.html
+++ b/dom/media/tests/mochitest/test_peerConnection_basicAudioVideo.html
@@ -329,6 +329,30 @@ expectAssertions
 ;
 }
 else
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Mac
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+2
+)
+;
+}
+else
 {
 SimpleTest
 .
