--- a/dom/permission/tests/test_permission_basics.html
+++ b/dom/permission/tests/test_permission_basics.html
@@ -207,6 +207,30 @@ use
 strict
 "
 ;
+if
+(
+!
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Win
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+1
+)
+;
+}
 var
 testPrivApp
 =
