--- a/dom/tests/mochitest/pointerlock/test_pointerlock-api.html
+++ b/dom/tests/mochitest/pointerlock/test_pointerlock-api.html
@@ -173,6 +173,34 @@ application
 javascript
 "
 >
+if
+(
+!
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Linux
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+1
+)
+;
+/
+/
+bug
+845552
+}
 /
 *
 *
