--- a/docshell/test/test_bug413310.html
+++ b/docshell/test/test_bug413310.html
@@ -140,6 +140,29 @@ text
 javascript
 "
 >
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Win
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+1
+)
+;
+}
 /
 *
 *
