Bug 404077:  Adjust annotations of expected assertions.  CLOSED TREE
UltraBlame original commit: 2ba886324c76311f520638ca787d63fe4eb84954

--- a/dom/media/tests/mochitest/test_peerConnection_basicAudio.html
+++ b/dom/media/tests/mochitest/test_peerConnection_basicAudio.html
@@ -262,6 +262,29 @@ application
 javascript
 "
 >
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Win
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+1
+)
+;
+}
 var
 audioLocal
 ;
