--- a/dom/media/tests/mochitest/test_peerConnection_basicAudioVideo.html
+++ b/dom/media/tests/mochitest/test_peerConnection_basicAudioVideo.html
@@ -324,7 +324,7 @@ SimpleTest
 expectAssertions
 (
 0
-9
+41
 )
 ;
 }
@@ -353,13 +353,26 @@ expectAssertions
 ;
 }
 else
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Linux
+"
+)
+)
 {
 SimpleTest
 .
 expectAssertions
 (
 0
-1
+6
 )
 ;
 }
