Bug 404077 - Adjust annotations of expected assertions; r=me on a CLOSED TREE
UltraBlame original commit: e8d3771bac8c0860aaf3f265017651d1fec988e0

--- a/dom/media/tests/mochitest/test_peerConnection_bug825703.html
+++ b/dom/media/tests/mochitest/test_peerConnection_bug825703.html
@@ -223,6 +223,29 @@ function
 (
 )
 {
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Win
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+80
+)
+;
+}
 var
 pc
 ;
