--- a/dom/permission/tests/test_permission_basics.html
+++ b/dom/permission/tests/test_permission_basics.html
@@ -209,7 +209,6 @@ strict
 ;
 if
 (
-!
 navigator
 .
 platform
@@ -221,6 +220,17 @@ Win
 "
 )
 )
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+34
+)
+;
+}
+else
 {
 SimpleTest
 .
