--- a/content/base/test/chrome/test_csp_bug768029.html
+++ b/content/base/test/chrome/test_csp_bug768029.html
@@ -334,6 +334,29 @@ none
 '
 "
 ;
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Linux
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+1
+)
+;
+}
 SimpleTest
 .
 waitForExplicitFinish
