--- a/dom/media/tests/mochitest/test_peerConnection_bug840344.html
+++ b/dom/media/tests/mochitest/test_peerConnection_bug840344.html
@@ -234,6 +234,30 @@ expectAssertions
 )
 ;
 }
+else
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Win
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
+125
+)
+;
+}
 runTest
 (
 function
