Bug 844275 - Update test_acceleration to guard against windows with no layer manager. r=joedrew
UltraBlame original commit: 0d76808a48e997bd5b50fb70473f2bf94b1dedf8

--- a/gfx/tests/mochitest/test_acceleration.html
+++ b/gfx/tests/mochitest/test_acceleration.html
@@ -285,6 +285,8 @@ Ci
 nsIDOMWindowUtils
 )
 ;
+try
+{
 if
 (
 windowutils
@@ -301,6 +303,43 @@ acceleratedWindows
 +
 +
 ;
+}
+}
+catch
+(
+e
+)
+{
+/
+/
+The
+window
+may
+not
+have
+a
+layer
+manager
+in
+which
+case
+we
+get
+an
+error
+.
+/
+/
+Don
+'
+t
+count
+it
+as
+an
+accelerated
+window
+.
 }
 }
 var
