--- a/dom/tests/mochitest/dom-level0/test_setting_document.domain_idn.html
+++ b/dom/tests/mochitest/dom-level0/test_setting_document.domain_idn.html
@@ -141,215 +141,6 @@ none
 div
 >
 <
-div
->
-<
-h2
->
-Whitelisted
-<
-/
-h2
->
-<
-iframe
-name
-=
-"
-idnKidWhitelist
-"
-src
-=
-"
-http
-:
-/
-/
-sub1
-.
-.
-/
-tests
-/
-dom
-/
-tests
-/
-mochitest
-/
-dom
--
-level0
-/
-idn_child
-.
-html
-?
-idn
--
-whitelist
-"
->
-<
-/
-iframe
->
-<
-iframe
-name
-=
-"
-punycodeKidWhitelist
-"
-src
-=
-"
-http
-:
-/
-/
-sub1
-.
-.
-/
-tests
-/
-dom
-/
-tests
-/
-mochitest
-/
-dom
--
-level0
-/
-idn_child
-.
-html
-?
-punycode
--
-whitelist
-"
->
-<
-/
-iframe
->
-<
-/
-div
->
-<
-div
->
-<
-h2
->
-Not
-whitelisted
-<
-/
-h2
->
-<
-iframe
-name
-=
-"
-idnKidNoWhitelist
-"
-src
-=
-"
-http
-:
-/
-/
-sub1
-.
-ex
-mple
-.
-test
-/
-tests
-/
-dom
-/
-tests
-/
-mochitest
-/
-dom
--
-level0
-/
-idn_child
-.
-html
-?
-idn
--
-nowhitelist
-"
->
-<
-/
-iframe
->
-<
-iframe
-name
-=
-"
-punycodeKidNoWhitelist
-"
-src
-=
-"
-http
-:
-/
-/
-sub1
-.
-ex
-mple
-.
-test
-/
-tests
-/
-dom
-/
-tests
-/
-mochitest
-/
-dom
--
-level0
-/
-idn_child
-.
-html
-?
-punycode
--
-nowhitelist
-"
->
-<
-/
-iframe
->
-<
-/
-div
->
-<
 pre
 id
 =
@@ -397,6 +188,41 @@ var
 gotPunycodeWhitelist
 =
 false
+;
+var
+oldProfile
+=
+SpecialPowers
+.
+getCharPref
+(
+"
+network
+.
+IDN
+.
+restriction_profile
+"
+"
+moderate
+"
+)
+;
+SpecialPowers
+.
+setCharPref
+(
+"
+network
+.
+IDN
+.
+restriction_profile
+"
+"
+ASCII
+"
+)
 ;
 var
 whitelistRegex
@@ -1314,6 +1140,20 @@ received
 "
 )
 ;
+SpecialPowers
+.
+setCharPref
+(
+"
+network
+.
+IDN
+.
+restriction_profile
+"
+oldProfile
+)
+;
 SimpleTest
 .
 finish
@@ -1382,6 +1222,215 @@ script
 <
 /
 pre
+>
+<
+div
+>
+<
+h2
+>
+Whitelisted
+<
+/
+h2
+>
+<
+iframe
+name
+=
+"
+idnKidWhitelist
+"
+src
+=
+"
+http
+:
+/
+/
+sub1
+.
+.
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+dom
+-
+level0
+/
+idn_child
+.
+html
+?
+idn
+-
+whitelist
+"
+>
+<
+/
+iframe
+>
+<
+iframe
+name
+=
+"
+punycodeKidWhitelist
+"
+src
+=
+"
+http
+:
+/
+/
+sub1
+.
+.
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+dom
+-
+level0
+/
+idn_child
+.
+html
+?
+punycode
+-
+whitelist
+"
+>
+<
+/
+iframe
+>
+<
+/
+div
+>
+<
+div
+>
+<
+h2
+>
+Not
+whitelisted
+<
+/
+h2
+>
+<
+iframe
+name
+=
+"
+idnKidNoWhitelist
+"
+src
+=
+"
+http
+:
+/
+/
+sub1
+.
+ex
+mple
+.
+test
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+dom
+-
+level0
+/
+idn_child
+.
+html
+?
+idn
+-
+nowhitelist
+"
+>
+<
+/
+iframe
+>
+<
+iframe
+name
+=
+"
+punycodeKidNoWhitelist
+"
+src
+=
+"
+http
+:
+/
+/
+sub1
+.
+ex
+mple
+.
+test
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+dom
+-
+level0
+/
+idn_child
+.
+html
+?
+punycode
+-
+nowhitelist
+"
+>
+<
+/
+iframe
+>
+<
+/
+div
 >
 <
 /
