--- a/dom/tests/mochitest/dom-level0/test_setting_document.domain_idn.html
+++ b/dom/tests/mochitest/dom-level0/test_setting_document.domain_idn.html
@@ -269,8 +269,8 @@ http
 /
 sub1
 .
-ex
-mple
+exa
+ple
 .
 test
 /
@@ -315,8 +315,8 @@ http
 /
 sub1
 .
-ex
-mple
+exa
+ple
 .
 test
 /
@@ -464,8 +464,8 @@ sub1
 \
 \
 .
-ex
-mple
+exa
+ple
 \
 \
 .
@@ -685,8 +685,8 @@ http
 /
 sub1
 .
-ex
-mple
+exa
+ple
 .
 test
 "
@@ -711,9 +711,9 @@ sub1
 xn
 -
 -
-exmple
+exaple
 -
-cua
+kqf
 .
 test
 "
@@ -1223,8 +1223,8 @@ http
 /
 sub1
 .
-ex
-mple
+exa
+ple
 .
 test
 "
@@ -1281,8 +1281,8 @@ http
 /
 sub1
 .
-ex
-mple
+exa
+ple
 .
 test
 "
