Bug 843508 - Remove support for multipart XHR responses. r=jst.
UltraBlame original commit: 50d1db66fb1ef67ed62a301b6b0c18819af93891

--- a/content/base/test/file_bug326337_inner.html
+++ b/content/base/test/file_bug326337_inner.html
@@ -41,7 +41,7 @@ example
 com
 "
 ;
-runTest1
+runTest
 (
 )
 ;
@@ -49,7 +49,7 @@ var
 xhr
 ;
 function
-runTest1
+runTest
 (
 )
 {
@@ -109,97 +109,6 @@ root
 )
 )
 ;
-runTest2
-(
-)
-;
-}
-}
-xhr
-.
-send
-(
-null
-)
-;
-}
-function
-runTest2
-(
-)
-{
-var
-secondDoc
-=
-false
-;
-xhr
-=
-new
-XMLHttpRequest
-(
-)
-;
-xhr
-.
-multipart
-=
-true
-;
-xhr
-.
-open
-(
-"
-GET
-"
-"
-file_bug326337_multipart
-.
-txt
-"
-true
-)
-;
-xhr
-.
-onreadystatechange
-=
-function
-(
-)
-{
-if
-(
-xhr
-.
-readyState
-=
-=
-4
-)
-{
-check
-(
-xhr
-.
-responseXML
-.
-documentElement
-.
-getAttribute
-(
-"
-root
-"
-)
-)
-;
-if
-(
-secondDoc
-)
-{
 SpecialPowers
 .
 wrap
@@ -216,14 +125,6 @@ hash
 done
 "
 ;
-}
-else
-{
-secondDoc
-=
-true
-;
-}
 }
 }
 xhr
