--- a/content/base/test/file_mixed_content_main.html
+++ b/content/base/test/file_mixed_content_main.html
@@ -233,13 +233,23 @@ objectStatus
 object
 )
 {
+/
+/
+Expose
+our
+privileged
+bits
+on
+the
 object
-instanceof
+object
+=
 SpecialPowers
 .
-Ci
-.
-nsIObjectLoadingContent
+wrap
+(
+object
+)
 ;
 if
 (
