--- a/content/html/content/test/test_bug613722.html
+++ b/content/html/content/test/test_bug613722.html
@@ -180,26 +180,6 @@ Bug
 *
 *
 /
-/
-*
-*
-*
-TODO
-:
-this
-test
-should
-be
-removed
-when
-bug
-614825
-will
-be
-fixed
-.
-*
-/
 var
 rect
 =
@@ -255,10 +235,12 @@ bottom
 ;
 ok
 (
+!
 hasFrame
 "
 embed
 should
+not
 have
 a
 frame
