Bug 847885 - disable test_bug600570 on Win8. r=khuey
UltraBlame original commit: 5f5bf431f520bb7ab0a5dc0be3163fdd811fecb3

--- a/editor/libeditor/text/tests/test_bug600570.html
+++ b/editor/libeditor/text/tests/test_bug600570.html
@@ -248,6 +248,8 @@ fails
 on
 Windows
 7
+and
+8
 if
 (
 navigator
@@ -262,6 +264,26 @@ NT
 6
 .
 1
+"
+)
+=
+=
+-
+1
+&
+&
+navigator
+.
+userAgent
+.
+indexOf
+(
+"
+Windows
+NT
+6
+.
+2
 "
 )
 =
