--- a/editor/libeditor/text/tests/test_bug597331.html
+++ b/editor/libeditor/text/tests/test_bug597331.html
@@ -242,6 +242,8 @@ fails
 on
 Windows
 7
+and
+8
 if
 (
 navigator
@@ -256,6 +258,26 @@ NT
 6
 .
 1
+"
+)
+=
+=
+-
+1
+&
+&
+navigator
+.
+userAgent
+.
+indexOf
+(
+"
+Windows
+NT
+6
+.
+2
 "
 )
 =
