Bug 847881 - adjust test_sizetocontent_clamp for minimum window size constraints on Win8. r=mounir
UltraBlame original commit: 41efbfe49d6681067455f7645f8b337b7033857d

--- a/dom/tests/mochitest/bugs/test_sizetocontent_clamp.html
+++ b/dom/tests/mochitest/bugs/test_sizetocontent_clamp.html
@@ -240,106 +240,35 @@ window
 s
 size
 .
-/
-/
-The
-window
-size
-being
-set
-by
-the
-platform
-we
-can
-'
-t
-guarantee
-it
-will
-be
-respected
-.
-/
-/
-In
-platforms
-other
-than
-Windows
-5
-is
-a
-good
-epsilon
-.
-On
-windows
-it
-seems
-/
-/
-that
-most
-of
-the
-time
-the
-width
-is
-14
-/
-15
-higher
-than
-expected
-so
-we
-need
-/
-/
-to
-have
-an
-epsilon
-that
-matches
-this
-difference
-.
-/
-/
-Actually
-on
-platforms
-other
-than
-Windows
-epsilon
-of
-0
-might
-work
-.
-/
-/
-Only
-innerWidth
-on
 Windows
 has
-a
-14
+varying
+minimum
 /
-15
-pixels
-difference
+/
+sizes
+depending
+on
+the
+os
+due
 to
-what
+outer
+window
+chrome
+.
+Unix
 is
+given
+5
 /
 /
-requested
+pixels
+to
+protect
+against
+minor
+variances
 .
 var
 epsilon
@@ -362,6 +291,72 @@ Win
 5
 :
 20
+;
+/
+/
+Windows
+8
+has
+a
+minimum
+122
+pixel
+inner
+window
+width
+due
+to
+/
+/
+outer
+window
+chrome
+.
+var
+isWin8
+=
+(
+navigator
+.
+userAgent
+.
+indexOf
+(
+"
+Windows
+NT
+6
+.
+2
+"
+)
+!
+=
+-
+1
+)
+;
+var
+innerWidthMin
+=
+(
+isWin8
+?
+120
+:
+100
+)
+;
+var
+innerWidthMax
+=
+(
+isWin8
+?
+125
+:
+100
+)
 ;
 function
 test
@@ -439,7 +434,7 @@ innerWidth
 epsilon
 >
 =
-100
+innerWidthMin
 &
 &
 w
@@ -449,14 +444,21 @@ innerWidth
 epsilon
 <
 =
-100
+innerWidthMax
 "
 innerWidth
 should
 be
-around
-100
+between
 "
++
+innerWidthMin
++
+"
+and
+"
++
+innerWidthMax
 )
 ;
 ok
