Bug 837458 - Refactoring of PeerConnection mochitest framework. r=ekr, r=jsmith
UltraBlame original commit: 4740975a1063d58f1e092f5eccd0f9b1a7843d7b

--- a/dom/media/tests/mochitest/test_peerConnection_bug834153.html
+++ b/dom/media/tests/mochitest/test_peerConnection_bug834153.html
@@ -10,32 +10,6 @@ html
 head
 >
 <
-meta
-charset
-=
-"
-utf
--
-8
-"
->
-<
-title
->
-Bug
-834153
-:
-Queue
-CreateAnswer
-in
-PeerConnection
-.
-js
-<
-/
-title
->
-<
 link
 rel
 =
@@ -76,30 +50,6 @@ src
 =
 "
 /
-MochiKit
-/
-MochiKit
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-type
-=
-"
-application
-/
-javascript
-"
-src
-=
-"
-/
 tests
 /
 SimpleTest
@@ -136,65 +86,10 @@ script
 >
 <
 /
-meta
->
-<
-/
 head
 >
 <
 body
->
-<
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-834153
-"
->
-Queue
-CreateAnswer
-in
-PeerConnection
-.
-js
-<
-/
-a
->
-<
-p
-id
-=
-"
-display
-"
->
-<
-/
-p
 >
 <
 pre
@@ -206,11 +101,6 @@ test
 >
 <
 script
-class
-=
-"
-testbody
-"
 type
 =
 "
@@ -242,6 +132,27 @@ expectAssertions
 )
 ;
 }
+createHTML
+(
+{
+bug
+:
+"
+834153
+"
+title
+:
+"
+Queue
+CreateAnswer
+in
+PeerConnection
+.
+js
+"
+}
+)
+;
 function
 croak
 (
@@ -269,24 +180,10 @@ function
 {
 var
 pc1
-;
-pc1
 =
 new
 mozRTCPeerConnection
 (
-)
-;
-ok
-(
-pc1
-"
-pc1
-is
-non
--
-null
-"
 )
 ;
 pc1
@@ -298,23 +195,12 @@ function
 d
 )
 {
+var
 pc2
 =
 new
 mozRTCPeerConnection
 (
-)
-;
-ok
-(
-pc2
-"
-pc2
-is
-non
--
-null
-"
 )
 ;
 /
