--- a/dom/media/tests/mochitest/test_peerConnection_bug835370.html
+++ b/dom/media/tests/mochitest/test_peerConnection_bug835370.html
@@ -10,34 +10,6 @@ html
 head
 >
 <
-meta
-charset
-=
-"
-utf
--
-8
-"
->
-<
-title
->
-Bug
-835370
-:
-PeerConnection
-.
-createOffer
-valid
-/
-invalid
-constraints
-permutations
-<
-/
-title
->
-<
 link
 rel
 =
@@ -78,30 +50,6 @@ src
 =
 "
 /
-MochiKit
-/
-MochiKit
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-type
-=
-"
-application
-/
-javascript
-"
-src
-=
-"
-/
 tests
 /
 SimpleTest
@@ -138,68 +86,10 @@ script
 >
 <
 /
-meta
->
-<
-/
 head
 >
 <
 body
->
-<
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-825703
-"
->
-PeerConnection
-.
-createOffer
-constraints
-valid
-/
-invalid
-constraints
-permutations
-<
-/
-a
->
-<
-p
-id
-=
-"
-display
-"
->
-<
-/
-p
 >
 <
 pre
@@ -211,11 +101,6 @@ test
 >
 <
 script
-class
-=
-"
-testbody
-"
 type
 =
 "
@@ -247,6 +132,29 @@ expectAssertions
 )
 ;
 }
+createHTML
+(
+{
+bug
+:
+"
+825703
+"
+title
+:
+"
+PeerConnection
+.
+createOffer
+valid
+/
+invalid
+constraints
+permutations
+"
+}
+)
+;
 runTest
 (
 function
