--- a/browser/extensions/pdfjs/content/web/viewer.html
+++ b/browser/extensions/pdfjs/content/web/viewer.html
@@ -250,7 +250,7 @@ Thumbnails
 tabindex
 =
 "
-1
+2
 "
 data
 -
@@ -306,7 +306,7 @@ Outline
 tabindex
 =
 "
-2
+3
 "
 data
 -
@@ -409,6 +409,7 @@ class
 findbar
 hidden
 doorHanger
+hiddenSmallView
 "
 id
 =
@@ -459,7 +460,7 @@ toolbarField
 tabindex
 =
 "
-20
+21
 "
 >
 <
@@ -490,7 +491,7 @@ findPrevious
 tabindex
 =
 "
-21
+22
 "
 data
 -
@@ -555,7 +556,7 @@ findNext
 tabindex
 =
 "
-22
+23
 "
 data
 -
@@ -625,7 +626,7 @@ toolbarLabel
 tabindex
 =
 "
-23
+24
 "
 data
 -
@@ -676,7 +677,7 @@ toolbarLabel
 tabindex
 =
 "
-24
+25
 "
 data
 -
@@ -768,7 +769,7 @@ Sidebar
 tabindex
 =
 "
-3
+4
 "
 data
 -
@@ -826,6 +827,7 @@ class
 "
 toolbarButton
 group
+hiddenSmallView
 "
 title
 =
@@ -837,7 +839,7 @@ Document
 tabindex
 =
 "
-4
+5
 "
 data
 -
@@ -900,7 +902,7 @@ previous
 tabindex
 =
 "
-5
+6
 "
 data
 -
@@ -967,7 +969,7 @@ next
 tabindex
 =
 "
-6
+7
 "
 data
 -
@@ -1073,7 +1075,7 @@ min
 tabindex
 =
 "
-7
+8
 "
 >
 <
@@ -1166,6 +1168,7 @@ class
 "
 toolbarButton
 fullscreen
+hiddenSmallView
 "
 title
 =
@@ -1178,7 +1181,7 @@ Mode
 tabindex
 =
 "
-11
+12
 "
 data
 -
@@ -1224,6 +1227,7 @@ class
 "
 toolbarButton
 openFile
+hiddenSmallView
 "
 title
 =
@@ -1234,7 +1238,7 @@ File
 tabindex
 =
 "
-12
+13
 "
 data
 -
@@ -1288,7 +1292,7 @@ Print
 tabindex
 =
 "
-13
+14
 "
 data
 -
@@ -1342,7 +1346,7 @@ Download
 tabindex
 =
 "
-14
+15
 "
 data
 -
@@ -1392,6 +1396,7 @@ class
 "
 toolbarButton
 bookmark
+hiddenSmallView
 "
 title
 =
@@ -1410,7 +1415,7 @@ window
 tabindex
 =
 "
-15
+16
 "
 data
 -
@@ -1499,7 +1504,7 @@ Out
 tabindex
 =
 "
-8
+9
 "
 data
 -
@@ -1567,7 +1572,7 @@ In
 tabindex
 =
 "
-9
+10
 "
 data
 -
@@ -1640,7 +1645,7 @@ false
 tabindex
 =
 "
-10
+11
 "
 data
 -
@@ -2045,6 +2050,11 @@ id
 =
 "
 viewerContainer
+"
+tabindex
+=
+"
+1
 "
 >
 <
