Backed out changeset 4740975a1063 (bug 837458) for Android mochitest failures.
UltraBlame original commit: 8e80f634fc8b089a1adfcd2973df89a6134fc21f

--- a/dom/media/tests/mochitest/test_peerConnection_bug825703.html
+++ b/dom/media/tests/mochitest/test_peerConnection_bug825703.html
@@ -10,6 +10,31 @@ html
 head
 >
 <
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
+title
+>
+Bug
+825703
+:
+RTCConfiguration
+valid
+/
+invalid
+permutations
+<
+/
+title
+>
+<
 link
 rel
 =
@@ -50,6 +75,30 @@ src
 =
 "
 /
+MochiKit
+/
+MochiKit
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+/
 tests
 /
 SimpleTest
@@ -86,10 +135,64 @@ script
 >
 <
 /
+meta
+>
+<
+/
 head
 >
 <
 body
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+825703
+"
+>
+RTCConfiguration
+valid
+/
+invalid
+permutations
+<
+/
+a
+>
+<
+p
+id
+=
+"
+display
+"
+>
+<
+/
+p
 >
 <
 pre
@@ -101,6 +204,11 @@ test
 >
 <
 script
+class
+=
+"
+testbody
+"
 type
 =
 "
@@ -109,26 +217,6 @@ application
 javascript
 "
 >
-createHTML
-(
-{
-bug
-:
-"
-825703
-"
-title
-:
-"
-RTCConfiguration
-valid
-/
-invalid
-permutations
-"
-}
-)
-;
 runTest
 (
 function
