--- a/dom/media/tests/mochitest/test_peerConnection_bug822674.html
+++ b/dom/media/tests/mochitest/test_peerConnection_bug822674.html
@@ -10,6 +10,74 @@ html
 head
 >
 <
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
+title
+>
+Test
+for
+Bug
+822674
+<
+/
+title
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+/
+tests
+/
+SimpleTest
+/
+SimpleTest
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+head
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
@@ -46,96 +114,17 @@ application
 /
 javascript
 "
-src
-=
-"
-/
-tests
-/
-SimpleTest
-/
-SimpleTest
-.
-js
-"
 >
-<
 /
-script
->
-<
-script
-type
-=
-"
-application
-/
-javascript
-"
-src
-=
-"
-head
-.
-js
-"
->
-<
-/
-script
->
-<
-/
-head
->
-<
-body
->
-<
-pre
-id
-=
-"
-test
-"
->
-<
-script
-type
-=
-"
-application
-/
-javascript
-"
->
-createHTML
-(
-{
-bug
-:
-"
+*
+*
+Test
+for
+Bug
 822674
-"
-title
-:
-"
-mozRTCPeerConnection
-isn
-'
-t
-a
-true
-javascript
-object
-as
-it
-should
-be
-"
-}
-)
-;
+*
+*
+/
 runTest
 (
 function
@@ -171,11 +160,6 @@ an
 RTCPeerConnection
 "
 )
-;
-pc
-=
-null
-;
 SimpleTest
 .
 finish
@@ -189,6 +173,88 @@ true
 <
 /
 script
+>
+<
+/
+head
+>
+<
+body
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+822674
+"
+>
+Mozilla
+Bug
+822674
+<
+/
+a
+>
+<
+p
+id
+=
+"
+display
+"
+>
+<
+/
+p
+>
+<
+div
+id
+=
+"
+content
+"
+style
+=
+"
+display
+:
+none
+"
+>
+<
+/
+div
+>
+<
+pre
+id
+=
+"
+test
+"
 >
 <
 /
