--- a/dom/media/tests/mochitest/test_peerConnection_bug834153.html
+++ b/dom/media/tests/mochitest/test_peerConnection_bug834153.html
@@ -10,6 +10,32 @@ html
 head
 >
 <
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
+title
+>
+Bug
+834153
+:
+Queue
+CreateAnswer
+in
+PeerConnection
+.
+js
+<
+/
+title
+>
+<
 link
 rel
 =
@@ -50,6 +76,30 @@ src
 =
 "
 /
+MochiKit
+/
+MochiKit
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+/
 tests
 /
 SimpleTest
@@ -86,10 +136,65 @@ script
 >
 <
 /
+meta
+>
+<
+/
 head
 >
 <
 body
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+834153
+"
+>
+Queue
+CreateAnswer
+in
+PeerConnection
+.
+js
+<
+/
+a
+>
+<
+p
+id
+=
+"
+display
+"
+>
+<
+/
+p
 >
 <
 pre
@@ -101,6 +206,11 @@ test
 >
 <
 script
+class
+=
+"
+testbody
+"
 type
 =
 "
@@ -132,27 +242,6 @@ expectAssertions
 )
 ;
 }
-createHTML
-(
-{
-bug
-:
-"
-834153
-"
-title
-:
-"
-Queue
-CreateAnswer
-in
-PeerConnection
-.
-js
-"
-}
-)
-;
 function
 croak
 (
@@ -180,10 +269,24 @@ function
 {
 var
 pc1
+;
+pc1
 =
 new
 mozRTCPeerConnection
 (
+)
+;
+ok
+(
+pc1
+"
+pc1
+is
+non
+-
+null
+"
 )
 ;
 pc1
@@ -195,12 +298,23 @@ function
 d
 )
 {
-var
 pc2
 =
 new
 mozRTCPeerConnection
 (
+)
+;
+ok
+(
+pc2
+"
+pc2
+is
+non
+-
+null
+"
 )
 ;
 /
