--- a/dom/media/tests/mochitest/test_peerConnection_bug835370.html
+++ b/dom/media/tests/mochitest/test_peerConnection_bug835370.html
@@ -10,6 +10,34 @@ html
 head
 >
 <
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
+title
+>
+Bug
+835370
+:
+PeerConnection
+.
+createOffer
+valid
+/
+invalid
+constraints
+permutations
+<
+/
+title
+>
+<
 link
 rel
 =
@@ -50,6 +78,30 @@ src
 =
 "
 /
+MochiKit
+/
+MochiKit
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+/
 tests
 /
 SimpleTest
@@ -86,10 +138,68 @@ script
 >
 <
 /
+meta
+>
+<
+/
 head
 >
 <
 body
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+825703
+"
+>
+PeerConnection
+.
+createOffer
+constraints
+valid
+/
+invalid
+constraints
+permutations
+<
+/
+a
+>
+<
+p
+id
+=
+"
+display
+"
+>
+<
+/
+p
 >
 <
 pre
@@ -101,6 +211,11 @@ test
 >
 <
 script
+class
+=
+"
+testbody
+"
 type
 =
 "
@@ -132,29 +247,6 @@ expectAssertions
 )
 ;
 }
-createHTML
-(
-{
-bug
-:
-"
-825703
-"
-title
-:
-"
-PeerConnection
-.
-createOffer
-valid
-/
-invalid
-constraints
-permutations
-"
-}
-)
-;
 runTest
 (
 function
