--- a/dom/media/tests/mochitest/test_peerConnection_bug840344.html
+++ b/dom/media/tests/mochitest/test_peerConnection_bug840344.html
@@ -10,6 +10,28 @@ html
 head
 >
 <
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
+title
+>
+Bug
+840344
+:
+Assertion
+failure
+<
+/
+title
+>
+<
 link
 rel
 =
@@ -50,6 +72,30 @@ src
 =
 "
 /
+MochiKit
+/
+MochiKit
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+/
 tests
 /
 SimpleTest
@@ -85,25 +131,8 @@ js
 script
 >
 <
-script
-type
-=
-"
-application
 /
-javascript
-"
-src
-=
-"
-pc
-.
-js
-"
->
-<
-/
-script
+meta
 >
 <
 /
@@ -111,6 +140,53 @@ head
 >
 <
 body
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+840344
+"
+>
+Bug
+840344
+<
+/
+a
+>
+<
+p
+id
+=
+"
+display
+"
+>
+<
+/
+p
 >
 <
 pre
@@ -122,6 +198,11 @@ test
 >
 <
 script
+class
+=
+"
+testbody
+"
 type
 =
 "
@@ -177,26 +258,21 @@ expectAssertions
 )
 ;
 }
-createHTML
+runTest
 (
-{
-bug
-:
-"
-840344
-"
-title
-:
-"
-Prevent
-multiple
-creations
-of
-local
-SDP
-"
-}
+function
+(
 )
+{
+var
+answerCount
+=
+0
+;
+var
+setLocalCount
+=
+0
 ;
 /
 /
@@ -799,19 +875,129 @@ offer
 "
 }
 ;
+info
+(
+"
+Step
+0
+:
+Instantiate
+a
+Peer
+Connection
+"
+)
+;
 var
-steps
+pc
 =
-[
-[
-"
-SET_REMOTE_DESCRIPTION
-"
+new
+mozRTCPeerConnection
+(
+)
+;
+/
+/
+First
+:
+Kick
+off
+the
+chain
+of
+events
+by
+asking
+for
+a
+mic
+and
+camera
+var
+start
+=
 function
 (
-test
 )
 {
+info
+(
+"
+Step
+1
+:
+Get
+User
+Media
+for
+Audio
+and
+Video
+"
+)
+;
+getUserMedia
+(
+{
+audio
+:
+true
+video
+:
+true
+}
+gumSuccess
+unexpectedCallbackAndFinish
+)
+;
+}
+;
+/
+/
+Second
+:
+set
+the
+remote
+description
+var
+gumSuccess
+=
+function
+(
+x
+)
+{
+info
+(
+"
+Step
+2a
+:
+Add
+stream
+"
+)
+;
+pc
+.
+addStream
+(
+x
+)
+;
+info
+(
+"
+Step
+2b
+:
+Create
+Session
+Description
+"
+)
+;
 var
 osd
 =
@@ -821,50 +1007,54 @@ mozRTCSessionDescription
 offer
 )
 ;
-test
-.
-pcLocal
+info
+(
+"
+Step
+2c
+:
+Set
+Remote
+Description
+"
+)
+;
+pc
 .
 setRemoteDescription
 (
 osd
-function
-(
+setRemoteSuccess
+unexpectedCallbackAndFinish
 )
-{
-test
+;
+}
+;
+/
+/
+Third
+:
+Attempt
+to
+create
+an
+answer
 .
-next
-(
-)
-;
-}
-)
-;
-}
-]
-[
-"
-CHECK_MULTIPLE_ANSWERS
-"
+Twice
+.
+var
+setRemoteSuccess
+=
 function
 (
-test
 )
 {
-var
-answerCount
-=
-0
-;
-var
-setLocalCount
-=
-0
-;
 info
 (
 "
+Step
+3a
+:
 Create
 answer
 #
@@ -872,18 +1062,20 @@ answer
 "
 )
 ;
-test
-.
-pcLocal
+pc
 .
 createAnswer
 (
 answerSuccess
+unexpectedCallbackAndFinish
 )
 ;
 info
 (
 "
+Step
+3b
+:
 Create
 answer
 #
@@ -891,14 +1083,15 @@ answer
 "
 )
 ;
-test
-.
-pcLocal
+pc
 .
 createAnswer
 (
 answerSuccess
+unexpectedCallbackAndFinish
 )
+;
+}
 ;
 /
 /
@@ -914,8 +1107,10 @@ into
 the
 local
 description
-function
+var
 answerSuccess
+=
+function
 (
 answer
 )
@@ -942,7 +1137,7 @@ three
 info
 (
 "
-Got
+got
 answer
 #
 "
@@ -994,28 +1189,26 @@ length
 info
 (
 "
+Step
+4
+:
 Set
 local
 description
-for
-answer
-#
 "
-+
-answerCount
 )
 ;
-test
-.
-pcLocal
+pc
 .
 setLocalDescription
 (
 answer
 setLocalSuccess
+unexpectedCallbackAndFinish
 )
 ;
 }
+;
 /
 /
 Fifth
@@ -1033,9 +1226,12 @@ we
 re
 done
 .
-function
+var
 setLocalSuccess
+=
+function
 (
+x
 )
 {
 setLocalCount
@@ -1168,65 +1364,31 @@ is
 .
 "
 )
-test
-.
-next
-(
-)
-;
-}
-}
-}
-]
-]
-;
-var
-test
-=
-new
-PeerConnectionTest
-(
-{
-desktopSupportedOnly
-:
-true
-}
-)
-;
-test
-.
-setMediaConstraints
-(
-[
-{
-audio
-:
-true
-video
-:
-true
-}
-]
-[
-]
-)
-;
-test
-.
-chain
-.
-replaceAfter
+info
 (
 "
-PC_LOCAL_GUM
+Step
+5
+:
+Finished
 "
-steps
 )
 ;
-test
+SimpleTest
 .
-run
+finish
 (
+)
+;
+}
+}
+;
+start
+(
+)
+;
+}
+true
 )
 ;
 <
