Bug 844127 - Replaced 'Span' with 'Unknown' and added tests for the same. r=bz
UltraBlame original commit: 76a478fe3e06f5b5d0ae038a5832a0dafabb22c1

--- a/content/html/content/test/test_bug389797.html
+++ b/content/html/content/test/test_bug389797.html
@@ -720,7 +720,7 @@ HTML_TAG
 bgsound
 "
 "
-Span
+Unknown
 "
 )
 ;
@@ -1196,7 +1196,6 @@ HTML_TAG
 image
 "
 "
-Span
 "
 )
 ;
@@ -1397,7 +1396,7 @@ HTML_TAG
 multicol
 "
 "
-Span
+Unknown
 "
 )
 ;
@@ -2016,6 +2015,16 @@ tag
 ]
 )
 ;
+if
+(
+classInfoString
+!
+=
+'
+HTMLUnknownElement
+'
+)
+{
 is
 (
 node
@@ -2060,6 +2069,54 @@ nsIDOMHTMLUnknownElement
 "
 )
 ;
+}
+else
+{
+is
+(
+node
+instanceof
+HTMLUnknownElement
+true
+tagName
+(
+tag
+)
++
+"
+is
+an
+instance
+of
+HTMLUnknownElement
+"
+)
+;
+is
+(
+node
+instanceof
+SpecialPowers
+.
+Ci
+.
+nsIDOMHTMLUnknownElement
+true
+tagName
+(
+tag
+)
++
+"
+is
+an
+instance
+of
+nsIDOMHTMLUnknownElement
+"
+)
+;
+}
 /
 /
 Check
