--- a/dom/tests/mochitest/bugs/test_bug396843.html
+++ b/dom/tests/mochitest/bugs/test_bug396843.html
@@ -355,7 +355,7 @@ HTML_TAG
 bgsound
 "
 "
-Span
+Unknown
 "
 )
 HTML_TAG
@@ -706,7 +706,6 @@ HTML_TAG
 image
 "
 "
-Span
 "
 )
 HTML_TAG
@@ -742,7 +741,7 @@ HTML_TAG
 isindex
 "
 "
-Shared
+Unknown
 "
 )
 HTML_TAG
@@ -850,7 +849,7 @@ HTML_TAG
 multicol
 "
 "
-Span
+Unknown
 "
 )
 HTML_TAG
@@ -1021,7 +1020,7 @@ HTML_TAG
 spacer
 "
 "
-Shared
+Unknown
 "
 )
 HTML_TAG
