--- a/content/base/test/test_fileapi_slice.html
+++ b/content/base/test/test_fileapi_slice.html
@@ -243,6 +243,56 @@ text
 javascript
 "
 >
+const
+isOSXMtnLion
+=
+navigator
+.
+userAgent
+.
+indexOf
+(
+"
+Mac
+OS
+X
+10
+.
+8
+"
+)
+!
+=
+-
+1
+;
+if
+(
+isOSXMtnLion
+)
+{
+todo
+(
+false
+"
+Mountain
+Lion
+doesn
+'
+t
+like
+this
+test
+(
+bug
+788999
+)
+"
+)
+;
+}
+else
+{
 var
 fileNum
 =
@@ -1281,6 +1331,7 @@ expectedTestCount
 +
 +
 ;
+}
 <
 /
 script
