Bug 844431 - B2G MMS: provide nsIDOMMobileMessageManager interface (with sendMMS() first) (part 1, nsIDOMMobileMessageManager). r=vicamo sr=sicking a=leo+
UltraBlame original commit: a999914becb7746be559072b2c4c188e8be5f7c3

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -1127,6 +1127,9 @@ HTMLHtmlElement
 MozSmsManager
 "
 "
+MozMobileMessageManager
+"
+"
 MozSmsFilter
 "
 "
@@ -1401,6 +1404,9 @@ EventSource
 "
 "
 MozNavigatorSms
+"
+"
+MozNavigatorMobileMessage
 "
 "
 SVGSetElement
