Bug 849723 - Introduce API to use the private hidden window correctly. r=ehsan
UltraBlame original commit: 921e9f7f89245ccdd8521312114089dbf6566eb3

--- a/docshell/test/chrome/test_private_hidden_window.html
+++ b/docshell/test/chrome/test_private_hidden_window.html
@@ -291,57 +291,17 @@ appShell
 .
 hiddenPrivateDOMWindow
 ;
-var
-tmp
-=
-setTimeout
+mainWindow
+.
+PrivateBrowsingUtils
+.
+whenHiddenPrivateWindowReady
 (
 function
-poll
-(
-)
-{
-if
 (
 hidden
-.
-location
-.
-href
-!
-=
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-hiddenWindow
-.
-html
-"
-|
-|
-!
-hidden
-.
-document
-.
-body
 )
 {
-setTimeout
-(
-poll
-100
-)
-;
-return
-;
-}
 var
 iframe
 =
@@ -429,7 +389,6 @@ false
 )
 ;
 }
-100
 )
 ;
 function
