--- a/docshell/test/chrome/test_private_hidden_window.html
+++ b/docshell/test/chrome/test_private_hidden_window.html
@@ -291,17 +291,57 @@ appShell
 .
 hiddenPrivateDOMWindow
 ;
-mainWindow
-.
-PrivateBrowsingUtils
-.
-whenHiddenPrivateWindowReady
+var
+tmp
+=
+setTimeout
 (
 function
+poll
 (
-hidden
 )
 {
+if
+(
+hidden
+.
+location
+.
+href
+!
+=
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+hiddenWindow
+.
+html
+"
+|
+|
+!
+hidden
+.
+document
+.
+body
+)
+{
+setTimeout
+(
+poll
+100
+)
+;
+return
+;
+}
 var
 iframe
 =
@@ -389,6 +429,7 @@ false
 )
 ;
 }
+100
 )
 ;
 function
