--- a/browser/extensions/shumway/content/web/viewer.html
+++ b/browser/extensions/shumway/content/web/viewer.html
@@ -130,7 +130,7 @@ height
 ;
 }
 #
-fallback
+overlay
 {
 display
 :
@@ -138,7 +138,7 @@ none
 ;
 }
 #
-fallback
+overlay
 .
 enabled
 {
@@ -150,17 +150,23 @@ position
 :
 fixed
 ;
-color
+bottom
 :
-white
+0
 ;
 right
 :
-0px
+0
 ;
-bottom
+}
+#
+report
+#
+fallback
+{
+float
 :
-0px
+right
 ;
 width
 :
@@ -172,13 +178,13 @@ height
 ;
 padding
 :
+8px
+4px
 4px
 ;
-padding
--
-top
+color
 :
-8px
+white
 ;
 background
 -
@@ -216,6 +222,30 @@ none
 ;
 }
 #
+report
+{
+display
+:
+none
+;
+width
+:
+100px
+;
+}
+#
+overlay
+:
+hover
+#
+report
+{
+display
+:
+block
+;
+}
+#
 fallback
 .
 icon
@@ -231,8 +261,6 @@ white
 }
 #
 fallback
-.
-enabled
 :
 hover
 .
@@ -246,6 +274,10 @@ block
 ;
 }
 #
+report
+:
+hover
+#
 fallback
 :
 hover
@@ -254,12 +286,7 @@ background
 -
 color
 :
-rgb
-(
-0
-0
-0
-)
+black
 ;
 }
 media
@@ -286,7 +313,7 @@ body
 .
 started
 #
-fallback
+overlay
 {
 display
 :
@@ -326,6 +353,14 @@ div
 section
 >
 <
+div
+id
+=
+"
+overlay
+"
+>
+<
 a
 id
 =
@@ -357,6 +392,29 @@ span
 <
 /
 a
+>
+<
+a
+id
+=
+"
+report
+"
+href
+=
+"
+#
+"
+>
+Report
+Problems
+<
+/
+a
+>
+<
+/
+div
 >
 <
 menu
@@ -420,6 +478,24 @@ id
 =
 "
 inspectorMenu
+"
+>
+<
+/
+menuitem
+>
+<
+menuitem
+label
+=
+"
+Report
+Problems
+"
+id
+=
+"
+reportMenu
 "
 >
 <
