--- a/browser/extensions/shumway/content/web/viewer.html
+++ b/browser/extensions/shumway/content/web/viewer.html
@@ -130,7 +130,7 @@ height
 ;
 }
 #
-overlay
+fallback
 {
 display
 :
@@ -138,7 +138,7 @@ none
 ;
 }
 #
-overlay
+fallback
 .
 enabled
 {
@@ -150,23 +150,17 @@ position
 :
 fixed
 ;
+color
+:
+white
+;
+right
+:
+0px
+;
 bottom
 :
-0
-;
-right
-:
-0
-;
-}
-#
-report
-#
-fallback
-{
-float
-:
-right
+0px
 ;
 width
 :
@@ -178,13 +172,13 @@ height
 ;
 padding
 :
-8px
-4px
 4px
 ;
-color
+padding
+-
+top
 :
-white
+8px
 ;
 background
 -
@@ -222,30 +216,6 @@ none
 ;
 }
 #
-report
-{
-display
-:
-none
-;
-width
-:
-100px
-;
-}
-#
-overlay
-:
-hover
-#
-report
-{
-display
-:
-block
-;
-}
-#
 fallback
 .
 icon
@@ -261,6 +231,8 @@ white
 }
 #
 fallback
+.
+enabled
 :
 hover
 .
@@ -274,10 +246,6 @@ block
 ;
 }
 #
-report
-:
-hover
-#
 fallback
 :
 hover
@@ -286,7 +254,12 @@ background
 -
 color
 :
-black
+rgb
+(
+0
+0
+0
+)
 ;
 }
 media
@@ -313,7 +286,7 @@ body
 .
 started
 #
-overlay
+fallback
 {
 display
 :
@@ -353,14 +326,6 @@ div
 section
 >
 <
-div
-id
-=
-"
-overlay
-"
->
-<
 a
 id
 =
@@ -392,29 +357,6 @@ span
 <
 /
 a
->
-<
-a
-id
-=
-"
-report
-"
-href
-=
-"
-#
-"
->
-Report
-Problems
-<
-/
-a
->
-<
-/
-div
 >
 <
 menu
@@ -478,24 +420,6 @@ id
 =
 "
 inspectorMenu
-"
->
-<
-/
-menuitem
->
-<
-menuitem
-label
-=
-"
-Report
-Problems
-"
-id
-=
-"
-reportMenu
 "
 >
 <
