Bug 959958 - Implement ImageData constructor. r=bz
UltraBlame original commit: 4a801fc0581969d58ccd0d6a0f5cf9528a99d9c8

--- a/content/canvas/test/test_canvas.html
+++ b/content/canvas/test/test_canvas.html
@@ -70884,13 +70884,13 @@ undefined
 "
 )
 ;
-try
-{
 var
-_thrown
+_thrown_outer
 =
 false
 ;
+try
+{
 new
 window
 .
@@ -70906,24 +70906,29 @@ catch
 e
 )
 {
-_thrown
+_thrown_outer
 =
 true
 ;
 }
-finally
-{
 ok
 (
-_thrown
-"
+!
+_thrown_outer
+ctx
+.
+canvas
+.
+id
++
+'
 should
+not
 throw
 exception
-"
+'
 )
 ;
-}
 }
 <
 /
