Bug 964546 - Add test for ignored roles. r=surkov
UltraBlame original commit: be76dc85648200d3df4d4398e444ebee909d7a34

--- a/accessible/tests/mochitest/role/test_aria.html
+++ b/accessible/tests/mochitest/role/test_aria.html
@@ -1180,6 +1180,96 @@ ROLE_TOGGLE_BUTTON
 /
 /
 /
+ignore
+unknown
+roles
+take
+first
+known
+testRole
+(
+"
+unknown_roles
+"
+ROLE_PUSHBUTTON
+)
+;
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
 misc
 roles
 testRole
@@ -3272,6 +3362,29 @@ id
 "
 togglebutton
 "
+>
+<
+div
+role
+=
+"
+wiggly
+:
+worm
+abc123
+button
+"
+id
+=
+"
+unknown_roles
+"
+>
+worm
+button
+<
+/
+div
 >
 <
 div
