--- a/accessible/tests/mochitest/states/test_visibility.html
+++ b/accessible/tests/mochitest/states/test_visibility.html
@@ -1003,6 +1003,16 @@ STATE_INVISIBLE
 testStates
 (
 "
+div_transformed
+"
+STATE_OFFSCREEN
+0
+STATE_INVISIBLE
+)
+;
+testStates
+(
+"
 div_abschild
 "
 0
@@ -1296,6 +1306,34 @@ top
 "
 >
 offscreen
+!
+<
+/
+div
+>
+<
+div
+id
+=
+"
+div_transformed
+"
+style
+=
+"
+transform
+:
+translate
+(
+-
+999px
+-
+999px
+)
+;
+"
+>
+transformed
 !
 <
 /
