--- a/content/media/test/test_texttracklist.html
+++ b/content/media/test/test_texttracklist.html
@@ -113,6 +113,24 @@ video
 "
 )
 ;
+isnot
+(
+video
+.
+textTracks
+null
+"
+Video
+should
+have
+a
+list
+of
+TextTracks
+.
+"
+)
+;
 video
 .
 addTextTrack
