Bug 945766 - DOM Promise should pass Promise/A+ tests. r=bz
UltraBlame original commit: 6f90f9c6b49d02847819710e2c7942fb93064a5d

--- a/dom/promise/tests/test_promise.html
+++ b/dom/promise/tests/test_promise.html
@@ -3692,6 +3692,64 @@ runTest
 )
 ;
 }
+function
+promiseStrictHandlers
+(
+)
+{
+var
+promise
+=
+Promise
+.
+resolve
+(
+5
+)
+;
+promise
+.
+then
+(
+function
+(
+)
+{
+"
+use
+strict
+"
+;
+ok
+(
+this
+=
+=
+=
+undefined
+"
+Strict
+mode
+callback
+should
+have
+this
+=
+=
+=
+undefined
+.
+"
+)
+;
+runTest
+(
+)
+;
+}
+)
+;
+}
 var
 tests
 =
@@ -3729,6 +3787,7 @@ promiseThenableThrowsBeforeCallback
 promiseThenableThrowsAfterCallback
 promiseThenableRejectThenResolve
 promiseWithThenReplaced
+promiseStrictHandlers
 ]
 ;
 function
