Bug 811635 - Part 6: DOM API test. r=mrbkap, r=bz
UltraBlame original commit: 103b26ebd28a3b00a72feedae12350fb1012c3c6

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -6818,6 +6818,105 @@ a
 DOM
 peer
 !
+{
+name
+:
+"
+MozWifiP2pGroupOwner
+"
+b2g
+:
+true
+permission
+:
+"
+wifi
+-
+manage
+"
+}
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
+{
+name
+:
+"
+MozWifiP2pManager
+"
+b2g
+:
+true
+permission
+:
+"
+wifi
+-
+manage
+"
+}
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
+{
+name
+:
+"
+MozWifiP2pStatusChangeEvent
+"
+b2g
+:
+true
+permission
+:
+"
+wifi
+-
+manage
+"
+}
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
 "
 MutationEvent
 "
@@ -12138,6 +12237,27 @@ Android
 )
 ;
 var
+hasPermission
+=
+function
+(
+aPermission
+)
+{
+return
+SpecialPowers
+.
+hasPermission
+(
+aPermission
+window
+.
+document
+)
+;
+}
+;
+var
 interfaceMap
 =
 {
@@ -12257,6 +12377,22 @@ getBoolPref
 entry
 .
 pref
+)
+)
+|
+|
+(
+entry
+.
+permission
+&
+&
+!
+hasPermission
+(
+entry
+.
+permission
 )
 )
 )
