Bug 961027 - Add js/src/jit/arm directory to about:license. r=gerv
UltraBlame original commit: 7aca9bb221fc05a4d771ad699f91c11145f4c1b4

--- a/toolkit/content/license.html
+++ b/toolkit/content/license.html
@@ -35801,7 +35801,6 @@ dtoa
 /
 span
 >
-and
 <
 span
 class
@@ -35815,6 +35814,26 @@ js
 src
 /
 builtin
+<
+/
+span
+>
+and
+<
+span
+class
+=
+"
+path
+"
+>
+js
+/
+src
+/
+jit
+/
+arm
 <
 /
 span
