Backed out changesets 6db8b08a3aea and 1d7c2025bb56 (bug 918806) for B2G mochitest failures.
UltraBlame original commit: 7e4ed3b79f4d1adf75b643649148bed69ccf0f95

--- a/dom/promise/tests/test_promise_utils.html
+++ b/dom/promise/tests/test_promise_utils.html
@@ -2242,8 +2242,29 @@ waitForExplicitFinish
 (
 )
 ;
-runTest
+SpecialPowers
+.
+pushPrefEnv
 (
+{
+"
+set
+"
+:
+[
+[
+"
+dom
+.
+promise
+.
+enabled
+"
+true
+]
+]
+}
+runTest
 )
 ;
 /
