--- a/dom/workers/test/test_promise.html
+++ b/dom/workers/test/test_promise.html
@@ -267,8 +267,29 @@ waitForExplicitFinish
 (
 )
 ;
-runTest
+SpecialPowers
+.
+pushPrefEnv
 (
+{
+"
+set
+"
+:
+[
+[
+"
+dom
+.
+promise
+.
+enabled
+"
+true
+]
+]
+}
+runTest
 )
 ;
 <
