--- a/dom/promise/tests/test_resolve.html
+++ b/dom/promise/tests/test_resolve.html
@@ -342,8 +342,29 @@ waitForExplicitFinish
 (
 )
 ;
-runTest
+SpecialPowers
+.
+pushPrefEnv
 (
+{
+"
+set
+"
+:
+[
+[
+"
+dom
+.
+promise
+.
+enabled
+"
+true
+]
+]
+}
+runTest
 )
 ;
 /
