Bug 965084 - "ROLLBACK TO SAVEPOINT savepoint" doesn't fire appropriate triggers leaving orphaned files. r=bent
UltraBlame original commit: 35c57af24bf5e00d401ed2699379ad606e6ef6df

--- a/dom/indexedDB/test/test_file_os_delete.html
+++ b/dom/indexedDB/test/test_file_os_delete.html
@@ -125,10 +125,16 @@ yield
 undefined
 ;
 const
-fileData
+fileData1
 =
 {
 key
+:
+1
+obj
+:
+{
+id
 :
 1
 file
@@ -142,6 +148,34 @@ bin
 "
 100000
 )
+}
+}
+;
+const
+fileData2
+=
+{
+key
+:
+2
+obj
+:
+{
+id
+:
+1
+file
+:
+getRandomFile
+(
+"
+random
+.
+bin
+"
+100000
+)
+}
 }
 ;
 {
@@ -225,15 +259,72 @@ objectStoreName
 ;
 objectStore
 .
+createIndex
+(
+"
+index
+"
+"
+id
+"
+{
+unique
+:
+true
+}
+)
+;
+objectStore
+.
 add
 (
-fileData
+fileData1
 .
-file
-fileData
+obj
+fileData1
 .
 key
 )
+;
+request
+=
+objectStore
+.
+add
+(
+fileData2
+.
+obj
+fileData2
+.
+key
+)
+;
+request
+.
+addEventListener
+(
+"
+error
+"
+new
+ExpectError
+(
+"
+ConstraintError
+"
+true
+)
+)
+;
+request
+.
+onsuccess
+=
+unexpectedSuccessHandler
+;
+yield
+undefined
 ;
 event
 =
@@ -272,7 +363,17 @@ is
 usage
 startUsage
 +
-fileData
+fileData1
+.
+obj
+.
+file
+.
+size
++
+fileData2
+.
+obj
 .
 file
 .
@@ -306,7 +407,7 @@ objectStoreName
 .
 delete
 (
-fileData
+fileData1
 .
 key
 )
@@ -353,19 +454,39 @@ is
 usage
 startUsage
 +
-fileData
+fileData1
+.
+obj
+.
+file
+.
+size
++
+fileData2
+.
+obj
 .
 file
 .
 size
 "
 OS
-file
+files
 exists
 "
 )
 ;
-fileData
+fileData1
+.
+obj
+.
+file
+=
+null
+;
+fileData2
+.
+obj
 .
 file
 =
@@ -396,7 +517,7 @@ endUsage
 startUsage
 "
 OS
-file
+files
 deleted
 "
 )
