Bug 827161, part 2 - Implement HTML 5's ValidityState.badInput and implement the state for HTMLInputElement's number type. r=smaug
UltraBlame original commit: e67fbfeab5d5499b8c5c3dc6b1c337085c0103d4

--- a/content/html/content/test/forms/test_input_typing_sanitization.html
+++ b/content/html/content/test/forms/test_input_typing_sanitization.html
@@ -359,6 +359,11 @@ testData
 ]
 ;
 var
+gCurrentTest
+=
+null
+;
+var
 gValidData
 =
 [
@@ -418,6 +423,57 @@ g
 '
 )
 ;
+}
+function
+runTestsForNextInputType
+(
+)
+{
+try
+{
+testRunner
+.
+next
+(
+)
+;
+}
+catch
+(
+e
+)
+{
+if
+(
+e
+.
+toString
+(
+)
+=
+=
+'
+[
+object
+StopIteration
+]
+'
+)
+{
+SimpleTest
+.
+finish
+(
+)
+;
+}
+else
+{
+throw
+StopIteration
+;
+}
+}
 }
 function
 checkValueSubmittedIsValid
@@ -503,6 +559,44 @@ gValidData
 length
 )
 {
+if
+(
+gCurrentTest
+.
+canHaveBadInputValidityState
+)
+{
+/
+/
+Don
+'
+t
+run
+the
+submission
+tests
+on
+the
+invalid
+input
+if
+submission
+/
+/
+will
+be
+blocked
+by
+invalid
+input
+.
+runTestsForNextInputType
+(
+)
+;
+return
+;
+}
 valueIndex
 =
 0
@@ -608,51 +702,10 @@ submitMethod
 sendKeyEventToSubmitForm
 )
 {
-try
-{
-testRunner
-.
-next
+runTestsForNextInputType
 (
 )
 ;
-}
-catch
-(
-e
-)
-{
-if
-(
-e
-.
-toString
-(
-)
-=
-=
-'
-[
-object
-StopIteration
-]
-'
-)
-{
-SimpleTest
-.
-finish
-(
-)
-;
-}
-else
-{
-throw
-StopIteration
-;
-}
-}
 return
 ;
 }
@@ -735,6 +788,9 @@ type
 '
 number
 '
+canHaveBadInputValidityState
+:
+true
 validData
 :
 [
@@ -1082,6 +1138,10 @@ of
 data
 )
 {
+gCurrentTest
+=
+test
+;
 if
 (
 test
