--- a/content/html/content/test/forms/test_validation.html
+++ b/content/html/content/test/forms/test_validation.html
@@ -570,6 +570,26 @@ DOM
 ok
 (
 '
+badInput
+'
+in
+validity
+"
+validity
+.
+badInput
+is
+not
+available
+in
+the
+DOM
+"
+)
+;
+ok
+(
+'
 patternMismatch
 '
 in
@@ -775,6 +795,27 @@ element
 validity
 .
 typeMismatch
+"
+The
+element
+should
+not
+suffer
+from
+a
+constraint
+validation
+"
+)
+;
+ok
+(
+!
+element
+.
+validity
+.
+badInput
 "
 The
 element
@@ -1784,6 +1825,70 @@ valid
 and
 :
 invalid
+should
+apply
+"
+)
+;
+i
+.
+type
+=
+"
+number
+"
+;
+ok
+(
+i
+.
+willValidate
+"
+Number
+state
+input
+should
+not
+be
+barred
+from
+constraint
+validation
+"
+)
+;
+is
+(
+window
+.
+getComputedStyle
+(
+i
+null
+)
+.
+getPropertyValue
+(
+'
+background
+-
+color
+'
+)
+"
+rgb
+(
+0
+255
+0
+)
+"
+"
+:
+valid
+pseudo
+-
+class
 should
 apply
 "
@@ -3046,6 +3151,30 @@ ok
 v
 .
 typeMismatch
+"
+When
+the
+element
+is
+not
+alive
+it
+shouldn
+'
+t
+suffer
+from
+constraint
+validation
+"
+)
+;
+ok
+(
+!
+v
+.
+badInput
 "
 When
 the
