Bug 958011: Fix worker object cycle collection to not rely on the JSObject being finalized, which is a bogus assumption. r=bent,mccr8
UltraBlame original commit: 3f052ca2795f1e64793d19132812ea7340201f07

--- a/dom/workers/test/test_closeOnGC.html
+++ b/dom/workers/test/test_closeOnGC.html
@@ -137,6 +137,21 @@ javascript
 "
 >
 var
+count
+=
+0
+;
+function
+testWorker
+(
+queryString
+)
+{
++
++
+count
+;
+var
 worker
 =
 new
@@ -146,7 +161,10 @@ Worker
 closeOnGC_worker
 .
 js
+?
 "
++
+queryString
 )
 ;
 worker
@@ -201,7 +219,10 @@ GET
 closeOnGC_server
 .
 sjs
+?
 "
++
+queryString
 false
 )
 ;
@@ -247,6 +268,16 @@ closed
 "
 )
 ;
+if
+(
+-
+-
+count
+=
+=
+0
+)
+{
 SimpleTest
 .
 finish
@@ -254,8 +285,52 @@ finish
 )
 ;
 }
+}
 500
 )
+;
+return
+worker
+;
+}
+testWorker
+(
+"
+white
+"
+)
+;
+var
+worker
+=
+testWorker
+(
+"
+gray
+"
+)
+;
+worker
+.
+onerror
+=
+function
+(
+)
+{
+}
+;
+worker
+.
+onerror
+.
+foo
+=
+worker
+;
+worker
+=
+null
 ;
 SimpleTest
 .
