Bug 967393 - Make the jsonp regex a bit more relaxed, r=rcampbell
UltraBlame original commit: b96fb0f7946077129d73d33e49249cdaf052b764

--- a/browser/devtools/netmonitor/test/html_jsonp-test-page.html
+++ b/browser/devtools/netmonitor/test/html_jsonp-test-page.html
@@ -148,10 +148,38 @@ function
 (
 )
 {
+get
+(
+"
+sjs_content
+-
+type
+-
+test
+-
+server
+.
+sjs
+?
+fmt
+=
+jsonp2
+&
+jsonp
+=
+_4567Sad
+"
+function
+(
+)
+{
 /
 /
 Done
 .
+}
+)
+;
 }
 )
 ;
