--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -8863,6 +8863,25 @@ DOM
 peer
 !
 "
+SVGFEDropShadowElement
+"
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
+"
 SVGFEFloodElement
 "
 /
