--- a/dom/inputmethod/mochitest/test_bug944397.html
+++ b/dom/inputmethod/mochitest/test_bug944397.html
@@ -153,15 +153,6 @@ Bug
 a
 >
 <
-input
-type
-=
-"
-text
-"
-/
->
-<
 p
 id
 =
@@ -269,6 +260,47 @@ oninput
 )
 ;
 }
+;
+/
+*
+*
+Bug
+957213
+.
+Sometimes
+we
+need
+to
+refocus
+the
+input
+field
+to
+avoid
+*
+intermittent
+test
+failure
+.
+*
+/
+content
+.
+setInterval
+(
+function
+(
+)
+{
+input
+.
+focus
+(
+)
+;
+}
+500
+)
 ;
 }
 function
@@ -394,6 +426,15 @@ function
 (
 )
 {
+if
+(
+!
+timeoutId
+)
+{
+return
+;
+}
 ok
 (
 true
@@ -410,6 +451,10 @@ clearTimeout
 (
 timeoutId
 )
+;
+timeoutId
+=
+null
 ;
 inputmethod_cleanup
 (
@@ -677,7 +722,7 @@ input
 )
 ;
 }
-60000
+20000
 )
 ;
 }
@@ -727,6 +772,15 @@ after
 a
 delay
 .
+SpecialPowers
+.
+DOMWindowUtils
+.
+focus
+(
+app
+)
+;
 setTimeout
 (
 function
