Bug 964674 - Use SpecialPowers.pushPrefEnv to ensure "media.video_stats.enabled" is turned on/off before proceeding test. r=padenot
UltraBlame original commit: 5a7d040c635ea3c236b5dc08fde8397d6454627b

--- a/content/media/test/test_bug654550.html
+++ b/content/media/test/test_bug654550.html
@@ -333,7 +333,7 @@ disabled
 }
 }
 function
-ontimeupdate
+ontimeupdate_statsEnabled
 (
 event
 )
@@ -345,22 +345,17 @@ event
 .
 target
 ;
-if
+v
+.
+removeEventListener
 (
-SpecialPowers
-.
-getBoolPref
-(
-"
-media
-.
-video_stats
-.
-enabled
-"
+'
+timeupdate
+'
+ontimeupdate_statsEnabled
+false
 )
-)
-{
+;
 checkStats
 (
 v
@@ -369,62 +364,54 @@ true
 ;
 SpecialPowers
 .
-setBoolPref
+popPrefEnv
+(
+function
+(
+)
+{
+v
+.
+addEventListener
 (
 "
-media
-.
-video_stats
-.
-enabled
+timeupdate
 "
-false
+ontimeupdate_statsDisabled
 )
 ;
 }
-else
-{
-checkStats
-(
-v
-false
 )
 ;
-SpecialPowers
-.
-setBoolPref
+}
+function
+ontimeupdate_statsDisabled
 (
-"
-media
-.
-video_stats
-.
-enabled
-"
-true
+event
 )
+{
+var
+v
+=
+event
+.
+target
 ;
 v
 .
 removeEventListener
 (
-"
+'
 timeupdate
-"
-ontimeupdate
+'
+ontimeupdate_statsDisabled
+false
 )
 ;
-SpecialPowers
-.
-clearUserPref
+checkStats
 (
-"
-media
-.
-video_stats
-.
-enabled
-"
+v
+false
 )
 ;
 removeNodeAndSource
@@ -441,7 +428,6 @@ v
 token
 )
 ;
-}
 }
 function
 startTest
@@ -483,16 +469,17 @@ started
 token
 )
 ;
-v
-.
-play
-(
-)
-;
 SpecialPowers
 .
-setBoolPref
+pushPrefEnv
 (
+{
+"
+set
+"
+:
+[
+[
 "
 media
 .
@@ -501,6 +488,17 @@ video_stats
 enabled
 "
 true
+]
+]
+}
+function
+(
+)
+{
+v
+.
+play
+(
 )
 ;
 v
@@ -510,16 +508,48 @@ addEventListener
 "
 timeupdate
 "
-ontimeupdate
+ontimeupdate_statsEnabled
 )
 ;
 }
+)
+;
+}
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+"
+set
+"
+:
+[
+[
+"
+media
+.
+video_stats
+.
+enabled
+"
+false
+]
+]
+}
+function
+(
+)
+{
 manager
 .
 runTests
 (
 gVideoTests
 startTest
+)
+;
+}
 )
 ;
 <
