--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -2367,9 +2367,6 @@ DataStore
 b2g
 :
 true
-release
-:
-false
 }
 /
 /
@@ -2396,9 +2393,6 @@ DataStoreChangeEvent
 b2g
 :
 true
-release
-:
-false
 }
 /
 /
@@ -2425,9 +2419,6 @@ DataStoreCursor
 b2g
 :
 true
-release
-:
-false
 }
 /
 /
@@ -6239,7 +6230,7 @@ peer
 name
 :
 "
-MozNDEFRecord
+MozNdefRecord
 "
 b2g
 :
