--- a/parser/htmlparser/tests/mochitest/test_viewsource.html
+++ b/parser/htmlparser/tests/mochitest/test_viewsource.html
@@ -33,30 +33,6 @@ src
 =
 "
 /
-MochiKit
-/
-packed
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-type
-=
-"
-text
-/
-javascript
-"
-src
-=
-"
-/
 tests
 /
 SimpleTest
@@ -194,40 +170,6 @@ responseText
 }
 /
 /
-Start
-a
-"
-view
-source
-"
-test
-using
-the
-document
-at
-"
-testUrl
-"
-.
-Note
-that
-/
-/
-the
-test
-will
-actually
-complete
-asynchronously
-.
-function
-startViewSourceTest
-(
-testUrl
-)
-{
-/
-/
 We
 will
 "
@@ -239,8 +181,9 @@ of
 the
 document
 in
-an
-IFRAME
+a
+new
+window
 .
 /
 /
@@ -263,43 +206,61 @@ text
 content
 of
 the
-IFRAME
+new
+window
+'
+s
 document
 '
 s
-top
+body
 element
 .
 /
 /
-Create
-the
-IFRAME
-.
-var
-iframe
-=
-document
-.
-createElement
-(
-'
-iframe
-'
-)
-;
-iframe
-.
-src
-=
-"
+We
+have
+to
+use
+a
+window
+as
 view
 -
 source
 :
+is
+only
+allowed
+in
+top
+level
+/
+/
+see
+bug
+624883
+.
+/
+/
+Open
+the
+new
+window
+.
+var
+windowWithSource
+=
+window
+.
+open
+(
 "
-+
-testUrl
+about
+:
+blank
+"
+)
 ;
 /
 /
@@ -312,13 +273,13 @@ carried
 out
 inside
 the
-IFRAME
+window
 '
 s
 onload
 handler
 .
-iframe
+windowWithSource
 .
 onload
 =
@@ -331,7 +292,7 @@ apparentSource
 =
 this
 .
-contentDocument
+document
 .
 body
 .
@@ -342,28 +303,14 @@ actualSource
 =
 fetch
 (
-testUrl
+location
+.
+href
 )
 ;
-/
-/
-OK
-verify
-that
-the
-apparent
-source
-and
-the
-actual
-source
-agree
-.
-ok
+is
 (
 apparentSource
-=
-=
 actualSource
 "
 Sources
@@ -372,6 +319,11 @@ match
 "
 )
 ;
+windowWithSource
+.
+close
+(
+)
 SimpleTest
 .
 finish
@@ -379,84 +331,22 @@ finish
 )
 ;
 }
-/
-/
-Our
-test
-IFRAME
-is
-ready
-to
-go
-.
-However
-it
-will
-not
-load
-until
-we
-/
-/
-actually
-append
-it
-to
-the
-document
-.
-Do
-that
-now
-.
-Note
-that
-the
-test
-/
-/
-itself
-will
-run
-asynchronously
-some
-time
-after
-this
-function
-returns
-.
-document
-.
-body
-.
-appendChild
-(
-iframe
-)
-;
-}
-/
-/
-Start
-a
-test
-using
-this
-document
-as
-the
-test
-document
-.
-startViewSourceTest
-(
-document
+windowWithSource
 .
 location
 .
 href
-)
+=
+"
+view
+-
+source
+:
+"
++
+location
+.
+href
 ;
 <
 /
