Bug 962949 - disable v.networkState checks in test_preload_actions.html because those are not reliable, r=roc
UltraBlame original commit: 987400b6b8183d59a715d420cac23818c4ea61dd

--- a/content/media/test/test_preload_actions.html
+++ b/content/media/test/test_preload_actions.html
@@ -601,6 +601,12 @@ HAVE_NOTHING
 "
 )
 ;
+/
+/
+bug
+962949
+/
+/
 is
 (
 v
@@ -845,6 +851,12 @@ HAVE_CURRENT_DATA
 "
 )
 ;
+/
+/
+bug
+962949
+/
+/
 is
 (
 v
@@ -1296,6 +1308,12 @@ HAVE_NOTHING
 "
 )
 ;
+/
+/
+bug
+962949
+/
+/
 is
 (
 v
@@ -1583,6 +1601,12 @@ HAVE_NOTHING
 "
 )
 ;
+/
+/
+bug
+962949
+/
+/
 is
 (
 v
@@ -1840,6 +1864,12 @@ HAVE_NOTHING
 "
 )
 ;
+/
+/
+bug
+962949
+/
+/
 is
 (
 v
@@ -2158,6 +2188,12 @@ HAVE_NOTHING
 "
 )
 ;
+/
+/
+bug
+962949
+/
+/
 is
 (
 v
@@ -2555,6 +2591,12 @@ suspend
 "
 )
 ;
+/
+/
+bug
+962949
+/
+/
 is
 (
 v
@@ -3169,6 +3211,12 @@ HAVE_CURRENT_DATA
 "
 )
 ;
+/
+/
+bug
+962949
+/
+/
 is
 (
 v
@@ -3600,6 +3648,12 @@ HAVE_NOTHING
 "
 )
 ;
+/
+/
+bug
+962949
+/
+/
 is
 (
 v
@@ -3853,6 +3907,12 @@ HAVE_CURRENT_DATA
 "
 )
 ;
+/
+/
+bug
+962949
+/
+/
 is
 (
 v
