--- a/content/media/webspeech/recognition/test/test_call_start_from_end_handler.html
+++ b/content/media/webspeech/recognition/test/test_call_start_from_end_handler.html
@@ -271,6 +271,57 @@ callback
 )
 ;
 }
+function
+expectExceptionHandler
+(
+evt
+sr
+)
+{
+try
+{
+sr
+.
+start
+(
+)
+;
+}
+catch
+(
+err
+)
+{
+is
+(
+err
+.
+name
+"
+InvalidStateError
+"
+)
+;
+return
+;
+}
+ok
+(
+false
+"
+Calling
+start
+(
+)
+didn
+'
+t
+raise
+InvalidStateError
+"
+)
+;
+}
 performTest
 (
 {
@@ -294,27 +345,27 @@ expectedEvents
 start
 '
 :
-null
+expectExceptionHandler
 '
 audiostart
 '
 :
-null
+expectExceptionHandler
 '
 speechstart
 '
 :
-null
+expectExceptionHandler
 '
 speechend
 '
 :
-null
+expectExceptionHandler
 '
 audioend
 '
 :
-null
+expectExceptionHandler
 '
 result
 '
