Bug 932803 - [Contacts API] Add tests for migrations. r=reuben
UltraBlame original commit: 491fff0a0cda3d89506c1e4521d475135b3bc82b

--- a/dom/contacts/tests/test_contacts_substringmatching.html
+++ b/dom/contacts/tests/test_contacts_substringmatching.html
@@ -2217,7 +2217,7 @@ n
 ;
 SpecialPowers
 .
-setIntPref
+clearUserPref
 (
 "
 dom
@@ -2228,8 +2228,17 @@ substringmatching
 .
 BR
 "
--
-1
+)
+;
+SpecialPowers
+.
+clearUserPref
+(
+"
+ril
+.
+lastKnownSimMcc
+"
 )
 ;
 SimpleTest
