--- a/dom/contacts/tests/test_contacts_substringmatchingVE.html
+++ b/dom/contacts/tests/test_contacts_substringmatchingVE.html
@@ -968,7 +968,7 @@ n
 ;
 SpecialPowers
 .
-setIntPref
+clearUserPref
 (
 "
 dom
@@ -977,10 +977,19 @@ phonenumber
 .
 substringmatching
 .
-VE
+BR
 "
--
-1
+)
+;
+SpecialPowers
+.
+clearUserPref
+(
+"
+ril
+.
+lastKnownSimMcc
+"
 )
 ;
 SimpleTest
